fix icon svg align

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,8 @@ nz-footer {
   text-align: center;
 }
 
+
+
+ svg {
+  vertical-align: initial  !important;
+}
